tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/negative/unshadowable-selected-import-alias.wyst
module demo
import library { value as widen }
